# cop-sanitizer-demo

./: CMakeLists.txt  README.md  build.sh  build_address_leak_undefined.sh  build_memory.sh  build_normal.sh  build_thread.sh  valgrind.md
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
src/: CMakeLists.txt  double-delete.cpp  invalid-index.cpp  leak.cpp  thread-bad-ref.cpp  thread-globalvar.cpp  uninit-array.cpp  unrepresentable-int.cpp  use-after-return.cpp  virtual-dtor.cpp
